# m2m-gaussian-splatting

./: .gitignore  CHANGELOG.md  LICENSE  README.md  benchmark_results.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  m2m-gaussian-splatting.yaml  publish.yml
docs/: ARCHITECTURE.md
m2m-gaussian-splatting/: README.md  requirements.txt
m2m-gaussian-splatting/scripts/: run_benchmarks.py
m2m-gaussian-splatting/src/: __init__.py
m2m-gaussian-splatting/src/core/: hrm2_engine.py
scripts/: benchmark_gpu.py  quick_demo.py  run_benchmarks.py
src/: __init__.py
src/core/: __init__.py  clustering.py  encoding.py  hrm2_engine.py  splat_types.py
src/gpu/: __init__.py  backend.py  gpu_kmeans.py  gpu_search.py
src/memory/: __init__.py  manager.py
tests/: test_core.py
