[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m2m-gaussian-splatting"
version = "2.0.0"
description = "Hierarchical Retrieval and Memory Management for 3D Gaussian Splatting"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Brian Schwabauer", email = "schwabauerbriantomas@gmail.com"},
]
keywords = [
    "gaussian-splatting", "3dgs", "hierarchical-retrieval", "vector-search",
    "numba", "kmeans", "similarity-search", "point-cloud", "embedding",
    "cpu-optimized", "memory-management", "hrm2", "clustering",
    "gpu", "cuda", "pytorch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "numba>=0.58.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black",
]

[project.urls]
Repository = "https://github.com/schwabauerbriantomas-gif/m2m-gaussian-splatting"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 99
